2020-05-03  Dirk Eddelbuettel  <edd@debian.org>

	* inst/LICENSE_1_0.txt: Included from upstream tar.gz

2020-03-31  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Minor badge rearrangement, added example

2020-03-30  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added badges, edited, fixed typo

2020-03-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* NAMESPACE: Removed as not needed without R code

2019-12-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 1.72.0-3

	* local/scripts/CreateBoost.sh (boostinstall): Remove old boost
	installation to always create a fresh installation

2019-12-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 1.72.0-2

	* inst/include/boost/numeric/odeint/stepper/: Correct accidental
	renaming in this directory, only rename in .../generation/

	* DESCRIPTION (URL): Added a link to GH repo

2019-12-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 1.72.0-1

	* inst/include/boost/*: Upgraded to Boost 1.72

	* README.md: Updated package list for 1.72

	* inst/include/boost/numeric/odeint/stepper/generation/: As before
	rename karp54_classic.hpp to karp54_cl.hpp, adjust generation.hpp
	* inst/include/boost/numeric/ublas/storage.hpp : Add missing include
	for boost/serialization/array_wrapper.hpp

	* inst/include/boost/numeric/odeint/stepper/generation/: As before
	New adjust for generation_controlled_adams_bashforth_moulton.hpp
	* inst/include/boost/math/special_functions/hypergeometric_1F1.hpp:
	Adjust to renamed hypergeometric_1F1_small_a_negative_b_by_ratio.hpp

	* inst/include/boost/*: As before disable all diagnostic pragmas in
	accordance with the CRAN Policy (though this may not be a good idea...)

2019-01-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Releease 1.69.0-1

        * inst/include/boost/detail/lightweight_test_report.hpp: Add newline