@@ -1,3 +1,7 @@
+2020-12-12  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .github/workflows/ci.yaml: Add CI runner using r-ci
+
 2020-05-03  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/LICENSE_1_0.txt: Included from upstream tar.gz
